--- a/stomp-android/build.gradle
+++ b/stomp-android/build.gradle
@@ -3,11 +3,7 @@ apply plugin: 'android-library'
 dependencies {
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.yy.androidlib:util:1.0.8'
-    compile ('com.yy.androidlib:hiido-profiling:1.0.14'){
-        force = true
-        exclude group:'com.koushikdutta.async'
-        transitive = false
-    }
+    compile 'com.yy.androidlib:hiido-profiling:1.0.15'
 //    compile 'com.koushikdutta.async:androidasync:2.0.9'
 //    androidTestCompile 'org.robolectric:robolectric:2.4'
 //    androidTestCompile 'junit:junit:4.10'
