--- a/misaka-server/build.gradle
+++ b/misaka-server/build.gradle
@@ -1,5 +1,12 @@
 apply plugin: 'java'
 
 dependencies {
+    compile 'org.springframework.boot:spring-boot-starter:1.2.3.RELEASE'
+    compile 'com.ning:async-http-client:1.9.8'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.4.5'
+}
 
+jar {
+    baseName = 'misaka-server'
+    version = '1.0'
 }
