地址改为dev.yypm.com

--- a/demo-server/src/main/resources/application.properties
+++ b/demo-server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ jdbc.driverClassName = org.sqlite.JDBC
 jdbc.url = jdbc:sqlite:server.sqlite
 jdbc.username =  openid
 jdbc.password =  openid
-logging.level.= INFO
+logging.level.= DEBUG
 c3p0.testConnectionOnCheckout=true
 spring.jpa.database-platform=com.yy.misaka.server.lbs.config.SQLiteDialect
 #spring.view.prefix: /WEB-INF/jsp/
