--- a/lbs-server/build.gradle
+++ b/lbs-server/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.5.RELEASE'
+        springBootVersion = '1.2.3.RELEASE'
     }
     repositories {
         // NOTE: You should declare only repositories that you need here
@@ -57,6 +57,7 @@ repositories {
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-websocket'
+    compile 'org.springframework:spring-messaging:4.1.0.RELEASE'
     compile 'commons-httpclient:commons-httpclient:3.1'
     compile 'commons-fileupload:commons-fileupload:1.3.1'
     compile 'org.apache.httpcomponents:httpclient:4.4'
