--- a/lbs-server/build.gradle
+++ b/lbs-server/build.gradle
@@ -53,10 +53,14 @@ repositories {
     maven { url "http://repo.spring.io/release" }
 }
 
+configurations {
+    runtime.exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+}
+
 dependencies {
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-websocket'
-    compile 'org.springframework:spring-messaging:4.1.0.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-undertow'
     compile 'commons-httpclient:commons-httpclient:3.1'
     compile 'commons-fileupload:commons-fileupload:1.3.1'
     compile 'org.apache.httpcomponents:httpclient:4.4'
@@ -65,16 +69,6 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.7'
     compile 'commons-lang:commons-lang:2.6'
     testCompile 'junit:junit:4.10'
-    testCompile 'org.springframework:spring-test:4.0.7.RELEASE'
-    testCompile 'org.apache.tomcat.embed:tomcat-embed-core:8.0.8'
-    testCompile 'org.apache.tomcat.embed:tomcat-embed-websocket:8.0.8'
-    testCompile 'org.apache.tomcat.embed:tomcat-embed-logging-log4j:8.0.8'
-    testCompile 'javax.websocket:javax.websocket-api:1.0'
-    testCompile 'org.eclipse.jetty.websocket:websocket-client:9.2.1.v20140609'
-    testCompile 'org.eclipse.jetty:jetty-webapp:9.2.1.v20140609'
-    testCompile 'org.eclipse.jetty:jetty-client:9.2.1.v20140609'
-    testCompile 'com.jayway.jsonpath:json-path:0.9.1'
-    testCompile 'org.apache.httpcomponents:httpclient:4.3.3'
 }
 
 task wrapper(type: Wrapper) {
