--- a/lbs-server/build.gradle
+++ b/lbs-server/build.gradle
@@ -54,7 +54,7 @@ repositories {
 }
 
 configurations {
-    runtime.exclude group: "org.springframework.boot", module: "spring-boot-starter-tomcat"
+    compile.exclude module: "spring-boot-starter-tomcat"
 }
 
 dependencies {
