--- a/lbs-server/build.gradle
+++ b/lbs-server/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '1.2.5.RELEASE'
+        springBootVersion = '1.2.6.RELEASE'
     }
     repositories {
         // NOTE: You should declare only repositories that you need here
@@ -58,9 +58,13 @@ configurations {
 }
 
 dependencies {
+    compile 'com.corundumstudio.socketio:netty-socketio:1.7.7'
     compile 'org.springframework.boot:spring-boot-starter-web'
     compile 'org.springframework.boot:spring-boot-starter-websocket'
     compile 'org.springframework.boot:spring-boot-starter-undertow'
+    compile 'io.undertow:undertow-core:1.2.12.Final'
+    compile 'io.undertow:undertow-servlet:1.2.12.Final'
+    compile 'io.undertow:undertow-websockets-jsr:1.2.12.Final'
     compile 'commons-httpclient:commons-httpclient:3.1'
     compile 'commons-fileupload:commons-fileupload:1.3.1'
     compile 'org.apache.httpcomponents:httpclient:4.4'
