--- a/demo-android/build.gradle
+++ b/demo-android/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.yy.androidlib:util:1.0.8'
     compile 'com.yy.androidlib:widget:1.0.8'
+    compile 'io.socket:socket.io-client:0.6.1'
 
 }
