--- a/misaka-android/build.gradle
+++ b/misaka-android/build.gradle
@@ -105,7 +105,7 @@ uploadArchives {
             beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: sonatypeUsername, password: sonatypePassword)
+                authentication(userName: "admin", password: "admin123")
             }
 
             pom.project {
