--- a/misaka-android/build.gradle
+++ b/misaka-android/build.gradle
@@ -102,43 +102,43 @@ signing {
 
 uploadArchives {
     repositories {
-        mavenLocal()
-//        mavenDeployer {
-//            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-//
-//            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
-//                authentication(userName: "admin", password: "admin123")
-//            }
-//
-//            pom.project {
-//                name 'misaka-android'
-//                packaging 'jar'
-//                description 'misaka-android'
-//                description 'misaka-android'
-//                url 'https://github.com/xuduo/misaka'
-//
-//                scm {
-//                    url 'https://github.com/xuduo/AndroidNotificationCenter'
-//                    connection 'https://github.com/xuduo/AndroidNotificationCenter'
-//                    developerConnection 'https://github.com/xuduo/AndroidNotificationCenter'
-//                }
-//
-//                licenses {
-//                    license {
-//                        name 'The Apache Software License, Version 2.0'
-//                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-//                        distribution 'repo'
-//                    }
-//                }
-//
-//                developers {
-//                    developer {
-//                        id 'xuduo'
-//                        name 'xuduo'
-//                    }
-//                }
-//            }
-//
-//        }
+//        mavenLocal()
+        mavenDeployer {
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+
+            repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
+                authentication(userName: sonatypeUsername, password: sonatypePassword)
+            }
+
+            pom.project {
+                name 'misaka-android'
+                packaging 'jar'
+                description 'misaka-android'
+                description 'misaka-android'
+                url 'https://github.com/xuduo/misaka'
+
+                scm {
+                    url 'https://github.com/xuduo/AndroidNotificationCenter'
+                    connection 'https://github.com/xuduo/AndroidNotificationCenter'
+                    developerConnection 'https://github.com/xuduo/AndroidNotificationCenter'
+                }
+
+                licenses {
+                    license {
+                        name 'The Apache Software License, Version 2.0'
+                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        distribution 'repo'
+                    }
+                }
+
+                developers {
+                    developer {
+                        id 'xuduo'
+                        name 'xuduo'
+                    }
+                }
+            }
+
+        }
     }
 }
