--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include ':demo-android',  ':demo-server' ,  ':misaka-android'
+include ':demo-android',  ':demo-server' ,  ':misaka-android','java-emitter'
