--- a/demo-android/src/main/AndroidManifest.xml
+++ b/demo-android/src/main/AndroidManifest.xml
@@ -16,18 +16,22 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
 
+        <!--<activity-->
+                <!--android:name="com.yy.misaka.demo.SplashActivity"-->
+                <!--android:label="@string/app_name" >-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
         <activity
-                android:name="com.yy.misaka.demo.SplashActivity"
-                android:label="@string/app_name" >
+                android:name=".LoginActivity"
+                android:label="Login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-
-        <activity
-                android:name="com.yy.misaka.demo.LoginActivity"
-                android:label="Login" >
         </activity>
 
         <activity android:name="com.yy.misaka.demo.ProfileActivity" android:label="Profile" ></activity>
