--- a/demo-android/src/main/AndroidManifest.xml
+++ b/demo-android/src/main/AndroidManifest.xml
@@ -25,9 +25,18 @@
             <!--</intent-filter>-->
         <!--</activity>-->
 
+        <!--<activity-->
+                <!--android:name=".LoginActivity"-->
+                <!--android:label="Login" >-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+
         <activity
-                android:name=".LoginActivity"
-                android:label="Login" >
+            android:name=".DrawActivity"
+            android:label="Draw" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
