update packet proxy

--- a/demo-android/src/main/AndroidManifest.xml
+++ b/demo-android/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
 
         <activity
             android:name=".DrawActivity"
+            android:screenOrientation="portrait"
             android:label="Draw" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
