--- a/java-emitter/build.gradle
+++ b/java-emitter/build.gradle
@@ -1,5 +1,19 @@
 apply plugin: 'java'
 
+configurations {
+    provided
+}
+
+sourceSets {
+    main {
+        compileClasspath += configurations.provided
+    }
+    test {
+        compileClasspath += configurations.provided
+    }
+}
+
+sourceSets.main.compileClasspath += configurations.provided
 jar {
     baseName = 'java-emitter-server'
     version = '1.0'
@@ -25,4 +39,5 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.13'
     compile 'org.redisson:redisson:2.1.4'
     compile 'com.google.code.gson:gson:2.3.1'
+    compile 'io.socket:socket.io-client:0.6.1'
 }
