--- a/server-demo/build.gradle
+++ b/server-demo/build.gradle
@@ -18,6 +18,14 @@ apply plugin: 'eclipse'
 apply plugin: 'idea'
 apply plugin: 'spring-boot'
 
+task execute(type:JavaExec){
+    main = "com.yy.httpproxy.emitter.Benchmark"
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+
+
+
 jar {
     baseName = 'demo-server'
     version = '1.0'
@@ -55,17 +63,6 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web'
-    compile 'org.springframework.boot:spring-boot-starter-websocket'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa'
-    compile 'org.xerial:sqlite-jdbc:3.7.2'
-    compile 'commons-lang:commons-lang:2.6'
-    compile 'com.mchange:c3p0:0.9.2.1'
-    compile 'commons-httpclient:commons-httpclient:3.1'
-    compile 'commons-fileupload:commons-fileupload:1.3.1'
-    compile 'org.apache.httpcomponents:httpclient:4.4'
-    compile 'org.apache.httpcomponents:httpasyncclient:4.0.2'
-    compile 'com.ning:async-http-client:1.9.8'
-    testCompile 'junit:junit:4.10'
-    testCompile 'org.apache.httpcomponents:httpclient:4.3.3'
+    compile 'io.socket:socket.io-client:0.6.1'
+    compile project(':java-server-push-sdk')
 }
