--- a/android-demo/src/main/AndroidManifest.xml
+++ b/android-demo/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         </activity>
 
         <service android:name="com.yy.httpproxy.service.RemoteService" android:process=":push" android:enabled="true"/>
+        <service android:name="com.yy.httpproxy.service.ForegroundService" android:process=":push" android:enabled="true"/>
 
         <receiver
             android:name=".appmodel.YYNotificationReceiver"
