--- a/android-push-sdk/src/main/AndroidManifest.xml
+++ b/android-push-sdk/src/main/AndroidManifest.xml
@@ -5,6 +5,6 @@
     <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="19" />
 
     <application >
-
+        <service android:name="com.yy.httpproxy.service.ForegroundService"  android:enabled="true"/>
     </application>
 </manifest>
