--- a/push-server/package.json
+++ b/push-server/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "push-server",
+  "name": "socket.io-push",
   "version": "0.0.1",
-  "description": "[![Build Status](https://travis-ci.org/Automattic/socket.io-redis.svg?branch=master)](https://travis-ci.org/Automattic/socket.io-redis) [![NPM version](https://badge.fury.io/js/socket.io-redis.svg)](http://badge.fury.io/js/socket.io-redis)",
+  "description": "socket.io-push server by xuduo",
   "repository": {
     "type": "git",
-    "url": "git@github.com:Automattic/socket.io-redis.git"
+    "url": "git@github.com:xuduo/socket.io-push.git"
   },
   "dependencies": {
-    "apn": "1.7.5 ",
+    "apn": "1.7.5",
     "restify": "4.0.3",
     "randomstring": "1.1.3",
     "debug": "2.2.0",
-    "socket.io": "1.3.7 ",
+    "redis-clustr": "1.4.2",
+    "socket.io": "1.4.5 ",
     "socket.io-adapter": "0.4.0",
-    "socket.io-redis": "0.2.0",
-    "redis": "2.3.0"
+    "socket.io-redis": "1.0.0",
+    "redis": "2.4.2"
   }
 }
