--- a/push-server/package.json
+++ b/push-server/package.json
@@ -1,7 +1,11 @@
 {
   "name": "socket.io-push",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "description": "socket.io-push server by xuduo",
+  "main": "index.js",
+  "bin": {
+    "push-server": "./bin/push-server"
+  },
   "repository": {
     "type": "git",
     "url": "git@github.com:xuduo/socket.io-push.git"
@@ -9,9 +13,9 @@
   "dependencies": {
     "apn": "1.7.5",
     "restify": "4.0.3",
+    "redis-commands": "1.1.0",
     "randomstring": "1.1.3",
     "debug": "2.2.0",
-    "redis-clustr": "1.4.2",
     "socket.io": "1.4.5 ",
     "socket.io-adapter": "0.4.0",
     "socket.io-redis": "1.0.0",
