--- a/push-server/package.json
+++ b/push-server/package.json
@@ -1,10 +1,11 @@
 {
   "name": "socket.io-push",
-  "version": "0.0.3",
+  "version": "0.0.16",
   "description": "socket.io-push server by xuduo",
   "main": "index.js",
   "bin": {
-    "push-server": "./bin/push-server"
+    "push-server": "./bin/push-server",
+    "node-push-server": "./bin/node-push-server"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
     "randomstring": "1.1.3",
     "debug": "2.2.0",
     "socket.io": "1.4.5 ",
+    "commander": "2.9.0",
     "socket.io-adapter": "0.4.0",
     "socket.io-redis": "1.0.0",
     "redis": "2.4.2"
