--- a/android-push-sdk/build.gradle
+++ b/android-push-sdk/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     provided 'com.google.code.gson:gson:2.3.1'
     compile 'io.socket:socket.io-client:0.7.0'
     provided 'com.loopj.android:android-async-http:1.4.8'
+    compile 'org.msgpack:msgpack:0.6.11'
     compile files('libs/support-v4-19.1.0.jar')
     compile files('libs/android.jar')
 }
