--- a/push-server/package.json
+++ b/push-server/package.json
@@ -13,14 +13,15 @@
   },
   "dependencies": {
     "apn": "1.7.5",
-    "restify": "4.0.3",
-    "redis-commands": "1.1.0",
-    "randomstring": "1.1.3",
-    "debug": "2.2.0",
-    "socket.io": "1.4.5 ",
     "commander": "2.9.0",
+    "debug": "2.2.0",
+    "msgpack5": "^3.3.0",
+    "randomstring": "1.1.3",
+    "redis": "2.4.2",
+    "redis-commands": "1.1.0",
+    "restify": "4.0.3",
+    "socket.io": "1.4.5 ",
     "socket.io-adapter": "0.4.0",
-    "socket.io-redis": "1.0.0",
-    "redis": "2.4.2"
+    "socket.io-redis": "1.0.0"
   }
 }
