--- a/android-demo/build.gradle
+++ b/android-demo/build.gradle
@@ -36,6 +36,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':android-push-sdk')
+//    compile 'com.yy:android-push-sdk:1.0.4'
     compile 'com.android.support:appcompat-v7:19.+'
     compile 'com.google.code.gson:gson:2.4'
 }
