--- a/push-server/package.json
+++ b/push-server/package.json
@@ -16,12 +16,14 @@
     "commander": "2.9.0",
     "debug": "2.2.0",
     "msgpack-lite": "0.1.17",
+    "socket.io-parser": "2.2.6",
     "randomstring": "1.1.3",
     "redis": "2.4.2",
     "redis-commands": "1.1.0",
     "restify": "4.0.3",
     "socket.io": "1.4.5 ",
     "socket.io-adapter": "0.4.0",
-    "socket.io-redis": "1.0.0"
+    "socket.io-redis": "1.0.0",
+    "json3": "3.3.2"
   }
 }
