--- a/push-server/package.json
+++ b/push-server/package.json
@@ -15,15 +15,22 @@
     "apn": "1.7.5",
     "commander": "2.9.0",
     "debug": "2.2.0",
+    "json3": "3.3.2",
     "msgpack-lite": "0.1.17",
-    "socket.io-parser": "2.2.6",
     "randomstring": "1.1.3",
     "redis": "2.4.2",
     "redis-commands": "1.1.0",
     "restify": "4.0.3",
     "socket.io": "1.4.5 ",
     "socket.io-adapter": "0.4.0",
-    "socket.io-redis": "1.0.0",
-    "json3": "3.3.2"
+    "socket.io-parser": "2.2.6",
+    "socket.io-redis": "1.0.0"
+  },
+  "devDependencies": {
+    "chai-spies": "^0.7.1",
+    "chai": "^3.5.0",
+    "mocha": "2.3.4",
+    "socket.io-client": "1.4.5",
+    "superagent": "^1.8.0"
   }
 }
