--- a/push-server/package.json
+++ b/push-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socket.io-push",
-  "version": "0.0.36",
+  "version": "0.0.40",
   "description": "socket.io-push server by xuduo",
   "main": "index.js",
   "bin": {
@@ -16,7 +16,7 @@
     "commander": "2.9.0",
     "debug": "2.2.0",
     "json3": "3.3.2",
-    "msgpack-lite": "0.1.17",
+    "msgpack": "1.0.2",
     "randomstring": "1.1.3",
     "redis": "2.4.2",
     "redis-commands": "1.1.0",
