--- a/push-server/package.json
+++ b/push-server/package.json
@@ -15,8 +15,7 @@
     "apn": "1.7.5",
     "commander": "2.9.0",
     "debug": "2.2.0",
-    "json3": "3.3.2",
-    "msgpack": "1.0.2",
+    "msgpack-lite": "0.1.17",
     "randomstring": "1.1.3",
     "redis": "2.4.2",
     "redis-commands": "1.1.0",
