--- a/push-server/package.json
+++ b/push-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socket.io-push",
-  "version": "0.0.40",
+  "version": "0.0.41",
   "description": "socket.io-push server by xuduo",
   "main": "index.js",
   "bin": {
@@ -12,6 +12,8 @@
     "url": "git@github.com:xuduo/socket.io-push.git"
   },
   "dependencies": {
+    "async": "0.9.0",
+    "uid2": "0.0.3",
     "apn": "1.7.5",
     "commander": "2.9.0",
     "debug": "2.2.0",
@@ -26,6 +28,7 @@
     "socket.io-redis": "1.0.0"
   },
   "devDependencies": {
+    "expect.js": "0.3.1",
     "chai-spies": "^0.7.1",
     "chai": "^3.5.0",
     "mocha": "2.3.4",
