--- a/push-server/package.json
+++ b/push-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socket.io-push",
-  "version": "0.0.44",
+  "version": "0.0.55",
   "description": "socket.io-push server by xuduo",
   "main": "index.js",
   "bin": {
@@ -17,15 +17,14 @@
     "apn": "1.7.5",
     "commander": "2.9.0",
     "debug": "2.2.0",
-    "msgpack-lite": "0.1.17",
+    "msgpack-js": "0.3.0",
     "randomstring": "1.1.3",
     "redis": "2.4.2",
     "redis-commands": "1.1.0",
     "restify": "4.0.3",
     "socket.io": "1.4.5 ",
     "socket.io-adapter": "0.4.0",
-    "socket.io-parser": "2.2.6",
-    "socket.io-redis": "1.0.0"
+    "socket.io-parser": "2.2.6"
   },
   "devDependencies": {
     "expect.js": "0.3.1",
