--- a/push-server/package.json
+++ b/push-server/package.json
@@ -12,9 +12,8 @@
     "url": "git@github.com:xuduo/socket.io-push.git"
   },
   "dependencies": {
-    "async": "0.9.0",
-    "uid2": "0.0.3",
     "apn": "1.7.5",
+    "async": "0.9.0",
     "commander": "2.9.0",
     "debug": "2.2.0",
     "msgpack-js": "0.3.0",
@@ -24,7 +23,9 @@
     "restify": "4.0.3",
     "socket.io": "1.4.5 ",
     "socket.io-adapter": "0.4.0",
-    "socket.io-parser": "2.2.6"
+    "socket.io-parser": "2.2.6",
+    "uid2": "0.0.3",
+    "winston-levelonly": "^1.0.3"
   },
   "devDependencies": {
     "expect.js": "0.3.1",
