--- a/push-server/package.json
+++ b/push-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "socket.io-push",
-  "version": "0.0.70",
+  "version": "0.0.86",
   "description": "socket.io-push server by xuduo",
   "main": "index.js",
   "bin": {
@@ -24,14 +24,14 @@
     "restify": "4.0.3",
     "socket.io": "1.4.5 ",
     "socket.io-adapter": "0.4.0",
-    "socket.io-parser": "2.2.6"
+    "socket.io-parser": "2.2.6",
+    "superagent": "^1.8.0"
   },
   "devDependencies": {
     "expect.js": "0.3.1",
     "chai-spies": "^0.7.1",
     "chai": "^3.5.0",
     "mocha": "2.3.4",
-    "socket.io-client": "1.4.5",
-    "superagent": "^1.8.0"
+    "socket.io-client": "1.4.5"
   }
 }
